Created packages for each practical